--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,38 @@
 version: '3'
 
 services:
-    anyE:
-       image: a7cfa286e185
-       ports:
-         - "80:80"
-         - "9501:9501"
-         - "9502:9502"
-         - "9503:9503"
-       volumes:
-         - ./../:/usr/local/code
-       stdin_open: true 
-       tty: true
-       privileged: true
-       entrypoint: ["bash"]
+  swoft:
+    image: swoft/swoft:latest
+    container_name: my_swoft # 给容器自定义个名称便于管理
+    networks:
+      - backend
+    links:
+      - "mysql:mysql"
+    ports:
+      - "9501:9501" #端口映射
+    volumes:
+      - ./src:/var/www/ # 挂载本地swoft项目到镜像工作目录
+    stdin_open: true #打开标准输出 -i
+    tty: true # 打开 tty 会话 -t
+    privileged: true # 给与权限 比如创建文件夹之类的
+    #entrypoint: ["php", "/var/www/swoft/bin/swoft", "start"] # 入口启动命令 即启动 swoft 服务
+    entrypoint: ["bash"]
+
+
+  mysql:
+    image: mysql:5.7.28
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
+      - ./data/mysql:/var/lib/mysql/:rw
+    restart: always
+    networks:
+      - backend
+    environment:
+      MYSQL_ROOT_PASSWORD: "A123456"
+      TZ: "Asia/Shanghai"
+
+networks:
+  backend:
+    driver: bridge
